--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.6",
@@ -26,6 +27,7 @@
     "@testing-library/react": "^9.5.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-preset-env": "^1.7.0",
     "core-js": "^3.6.4",
     "jest": "^25.1.0",
     "lolex": "^6.0.0",
