BULK AUTOMATIC COMMIT

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "private": false,
   "scripts": {
     "build:prod": "webpack --config ./webpack/production.config.babel.js",
-    "build:dev": "webpack --config ./webpack/development.config.babel.js"
+    "build:dev": "webpack --config ./webpack/development.config.babel.js",
+    
+    "build:core": "google-closure-compiler --js='./src/core/*.js' --js_output_file='./dist/core.js'",
+    "build:react": "google-closure-compiler --js='./src/react/*.js' --js_output_file='./dist/react.js'",
+    "build:closure": "yarn build:core && yarn build:react"
   },
   "peerDependencies": {
     "react": "16.x",
