--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "object-assign": "^4.1.1"
   }
 }
