--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build:prod": "webpack --config ./webpack/production.config.babel.js",
     "build:dev": "webpack --config ./webpack/development.config.babel.js",
-    "build:core": "google-closure-compiler -O ADVANCED --js ./src/core.js --js_output_file ./dist/core.js",
+    "build:core": "google-closure-compiler -O ADVANCED --js ./src/core.js --js_output_file ./dist/browser.js",
     "build:react": "google-closure-compiler -O ADVANCED --js ./src/react.js --js_output_file ./dist/react.js",
     "build:closure": "yarn build:core && yarn build:react"
   },
