--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
   "license": "SEE LICENSE IN .LICENSE/LICENSE",
   "private": false,
   "scripts": {
-    "build:prod": "webpack --config ./webpack/production.config.babel.js",
-    "build:dev": "webpack --config ./webpack/development.config.babel.js",
-    "build:core": "google-closure-compiler -O ADVANCED --js ./src/core.js --js_output_file ./dist/browser.js",
-    "build:react": "google-closure-compiler -O ADVANCED --js ./src/react.js --js_output_file ./dist/react.js",
-    "build:closure": "yarn build:core && yarn build:react"
+    "build:core": "yarn google-closure-compiler -O ADVANCED --js ./src/core.js --js_output_file ./dist/browser.js",
+    "build:react": "yarn google-closure-compiler -O ADVANCED --js ./src/react.js --js_output_file ./dist/react.js",
+    "build:webpack": "yarn webpack --config webpack/common.config.babel.js"
   },
   "peerDependencies": {
     "react": "16.x",
@@ -31,11 +29,12 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.6",
-    "@babel/runtime": "^7.8.7",
+    "@babel/runtime": "^7.11.0",
     "@testing-library/react": "^9.5.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-env": "^1.7.0",
+    "google-closure-compiler": "^20200719.0.0",
     "jest": "^25.1.0",
     "lolex": "^6.0.0",
     "react": "^16.13.0",
@@ -46,6 +45,12 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.10.4",
+    "@babel/plugin-transform-regenerator": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/polyfill": "^7.10.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "core-js": "^3.6.5",
     "object-assign": "^4.1.1",
     "regenerator-runtime": "^0.13.5"
